--- a/BLAZAM/Shared/UI/DirectoryModelComponent.razor
+++ b/BLAZAM/Shared/UI/DirectoryModelComponent.razor
@@ -105,8 +105,17 @@
             LoadingData = false;
 
         }
+        if(Group!=null)
+        Group.OnModelChanged += (() => { InvokeAsync(StateHasChanged); });
 
+        if (User != null)
+            User.OnModelChanged += (() => { InvokeAsync(StateHasChanged); });
+            
+        if(Computer!=null)
+            Computer.OnModelChanged += (() => { InvokeAsync(StateHasChanged); });
 
+        if (OU != null)
+            OU.OnModelChanged += (() => { InvokeAsync(StateHasChanged); });
         await InvokeAsync(StateHasChanged);
 
     }
