--- a/BLAZAM/Shared/UI/OU/RenameOUModalContent.razor
+++ b/BLAZAM/Shared/UI/OU/RenameOUModalContent.razor
@@ -38,9 +38,8 @@
         Close();
 
     }
-    protected override bool ValidateModal()
-    {
-        return !OU.CanonicalName.IsNullOrEmpty();
-    }
+    protected override bool IsValid=> !OU.CanonicalName.IsNullOrEmpty();
+        
+    
 
 }
