--- a/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
@@ -1,6 +1,5 @@
 ﻿@inherits AppModalContent
 
-<div Background="Background.Light" Color="Color.Dark">
     <SettingsField>
         <MudTextField Label="@UserLocalization["Username"]" @bind-Value="@User.SamAccountName" Disabled=true />
 
@@ -38,7 +37,6 @@
 
 
     </SettingsField>
-</div>
 @code {
     #nullable disable warnings
     string newPassword = "";
@@ -85,12 +83,11 @@
             return false;
         }
     }
-    protected override bool ValidateModal()
-    {
-        return (!newPassword.IsNullOrEmpty()
-        && !newPasswordConfirm.IsNullOrEmpty()
-        && newPassword.Equals(newPasswordConfirm));
-    }
+    protected override bool IsValid => (!newPassword.IsNullOrEmpty()
+            && !newPasswordConfirm.IsNullOrEmpty()
+            && newPassword.Equals(newPasswordConfirm));
+        
+    
 
 
 }
