--- a/BLAZAM/Shared/UI/Section.razor
+++ b/BLAZAM/Shared/UI/Section.razor
@@ -1,10 +1,13 @@
-﻿<MudPaper Elevation=2 Class=@((FullWidth?"mud-width-full":"") + " section px-4 py-3") Style="overflow:hidden; position:relative;">
+﻿<MudPaper Elevation=2
+          Class=@((FullWidth?"mud-width-full":"") + " section px-4 py-3")
+          Style=@(Style +"overflow:hidden; position:relative;")>
     @if (SectionHeaderPosition == HeaderPosition.TopLeft || SectionHeaderPosition == HeaderPosition.TopRight)
     {
         <MudElement Class="section-title-container">
 
             <MudElement Class="section-title">
-                <MudText Color="TextColor" Class="section-title-text">@Title</MudText>
+                <MudText Color="TextColor" 
+                    Class="section-title-text">@Title</MudText>
 
             </MudElement>
         </MudElement>
@@ -19,7 +22,7 @@
         <MudElement Class="section-title-container">
 
             <MudElement Class="section-title">
-                <MudText Color="TextColor" class="section-title-text">@Title</MudText>
+                <MudText Color="TextColor" Class="section-title-text">@Title</MudText>
             </MudElement>
         </MudElement>
 
@@ -34,12 +37,12 @@
     @if (SectionHeaderPosition == HeaderPosition.TopLeft || SectionHeaderPosition == HeaderPosition.TopRight)
     {
         //vspacing = " top: -25px";
-       // vmargin = "margin-bottom: -35px";
+        // vmargin = "margin-bottom: -35px";
     }
     else
     {
-       // vspacing = " bottom: -22px";
-       // vmargin = "margin-top: -50px";
+        // vspacing = " bottom: -22px";
+        // vmargin = "margin-top: -50px";
     }
 
 
@@ -86,12 +89,15 @@
 </style>
 
 @code {
-    #nullable disable warnings
+#nullable disable warnings
     [Parameter]
     public HeaderPosition SectionHeaderPosition { get; set; } = HeaderPosition.TopLeft;
 
     [Parameter]
     public string Title { get; set; }
+
+    [Parameter]
+    public string Style { get; set; }
 
 
     /// <summary>
@@ -109,7 +115,7 @@
 
     string HeadingSizeString { get { return "h4"; } }
 
-   
+
     [Parameter]
     public RenderFragment ChildContent { get; set; }
 
