--- a/BLAZAM/Shared/UI/Settings/ReleaseNotesModalContent.razor
+++ b/BLAZAM/Shared/UI/Settings/ReleaseNotesModalContent.razor
@@ -1,6 +1,5 @@
 ﻿@inherits AppModalContent
-@*<MudMarkdown  Value="@Update.Release.ReleaseNotes"/>*@
-@*<MudMarkdown Value="@Value" />*@
+<MudMarkdown OverrideHeaderTypo=ConvertHeaders Value="@Update.Release.ReleaseNotes"/>
 
 @code {
     [Parameter]
