--- a/BLAZAM/Shared/Layouts/AppUserPageTracker.razor
+++ b/BLAZAM/Shared/Layouts/AppUserPageTracker.razor
@@ -1,5 +1,5 @@
 @inject NavigationManager Nav
-@inject IApplicationUserStateService UserStateService
+@inject ICurrentUserStateService CurrentUser
 
 @{
     
