--- a/BLAZAM/Shared/UI/PageSpecificChat.razor
+++ b/BLAZAM/Shared/UI/PageSpecificChat.razor
@@ -158,7 +158,7 @@
            InvokeAsync(StateHasChanged);
 
        });
-        currentUserState = UserStateService.CurrentUserState;
+        currentUserState = CurrentUser.State;
         AddThisViewer();
         Nav.LocationChanged += ((state, args) =>
         {
