--- a/BLAZAM/Shared/Layouts/AppUserButton.razor
+++ b/BLAZAM/Shared/Layouts/AppUserButton.razor
@@ -2,19 +2,19 @@
 @using BLAZAM.Server.Shared.UI.Themes;
 @inherits AppComponentBase
 @{
-    var messages = UserStateService.CurrentUserState?.Messages.Count;
+    var messages = CurrentUser.State?.Messages.Count;
 
 }
 @if (messages > 0)
 {
     <MudPopover Open=@NotificationsOpen TransformOrigin="Origin.TopRight" AnchorOrigin="Origin.BottomRight">
         <MudStack Row=true>
-        <MudListSubheader>Notifications</MudListSubheader>
-        <AppCloseButton OnClick=@(()=>{NotificationsOpen=false;}) />
+            <MudListSubheader>Notifications</MudListSubheader>
+            <AppCloseButton OnClick=@(()=>{NotificationsOpen=false;}) />
 
-    </MudStack>
+        </MudStack>
 
-    @foreach (var notification in UserStateService.CurrentUserState?.Messages)
+        @foreach (var notification in CurrentUser.State?.Messages)
         {
 
             <MudAlert OnClick=@(()=>{
@@ -37,16 +37,18 @@
 <MudMenu>
     <ActivatorContent>
         @{
-            var avatarBgColor = GenerateAvatarColor(UserStateService.CurrentUsername);
+            var avatarBgColor = GenerateAvatarColor(CurrentUser.State.Username);
         }
         @if (messages > 0)
         {
-            <MudBadge Color=Color.Tertiary Content="UserStateService.CurrentUserState.Messages.Count">
-                @if(UserStateService.CurrentUserState.UserSettings?.ProfilePicture!=null)
+            <MudBadge Color=Color.Tertiary Content="CurrentUser.State.Messages.Count">
+                @if (CurrentUser.State.UserSettings?.ProfilePicture != null)
                 {
-                    <Base64Image Data="@UserStateService.CurrentUserState.UserSettings?.ProfilePicture" />
-                }else{
-            <MudAvatar Elevation="4" Style="@avatarBgColor">@UserStateService.CurrentUsername?.FirstOrDefault()</MudAvatar>
+                    <Base64Image Data="@CurrentUser.State.UserSettings?.ProfilePicture" />
+                }
+                else
+                {
+                    <MudAvatar Elevation="4" Style="@avatarBgColor">@CurrentUser.State.Username?.FirstOrDefault()</MudAvatar>
 
                 }
 
@@ -54,7 +56,7 @@
         }
         else
         {
-           <CurrentUserAvatarIcon/>
+            <CurrentUserAvatarIcon />
 
         }
 
@@ -66,11 +68,11 @@
             <MudMenuItem OnClick="@(()=>{NotificationsOpen=!NotificationsOpen;})">Notifications</MudMenuItem>
         }
 
-        
+
         <MudMenuItem OnClick="@(()=>{profileModal.Show();})" Icon="@Icons.Material.Filled.Settings">
             @AppLocalization["Profile Settings"]
         </MudMenuItem>
-        @if (UserStateService.CurrentUserState?.Impersonator == null)
+        @if (CurrentUser.State?.Impersonator == null)
         {
             <MudMenuItem OnClick="@(()=>{Nav.NavigateTo("/logout",true);})" Icon="@Icons.Material.Filled.Logout">
                 @AppLocalization["Sign Out"]
@@ -87,7 +89,7 @@
 </MudMenu>
 <AppModal @ref=profileModal Title="Profile Settings">
     <CascadingValue Value="mainLayout">
-  <BLAZAM.Server.Shared.UI.Modals.AppUserProfileModalContent />
+        <BLAZAM.Server.Shared.UI.Modals.AppUserProfileModalContent />
     </CascadingValue>
 </AppModal>
 @code {
@@ -102,7 +104,11 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        NotificationPublisher.OnNotificationPublished += ((notifications) => { InvokeAsync(StateHasChanged); });
+        NotificationPublisher.OnNotificationPublished += ((notifications) =>
+        {
+            //if (notifications.Select(n => n.User).Contains(CurrentCurrentUser.State?.UserSettings))
+                InvokeAsync(StateHasChanged);
+        });
     }
 
 
@@ -123,8 +129,8 @@
     async Task MarkRead(UserNotification notification)
     {
         var inDBNotification = Context.UserNotifications.Where(n => n.Id == notification.Id).FirstOrDefault();
-        
         inDBNotification.IsRead = true;
-        Context.SaveChanges();
+        await Context.SaveChangesAsync();
+        await InvokeAsync(StateHasChanged);
     }
 }
