--- a/BLAZAM/Shared/UI/Dashboard/Widgets/NewGroupsWidget.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/NewGroupsWidget.razor
@@ -5,8 +5,8 @@
 @code {
     List<IADGroup> NewGroups
     {
-        get => UserStateService.CurrentUserState.Cache.Get<List<IADGroup>>(this.GetType());
-        set => UserStateService.CurrentUserState.Cache.Set(this.GetType(), value);
+        get => CurrentUser.State.Cache.Get<List<IADGroup>>(this.GetType());
+        set => CurrentUser.State.Cache.Set(this.GetType(), value);
     }
 
     protected override async Task OnInitializedAsync()
