Split scoped Active Directory Contexts

--- a/BLAZAM/Shared/Layouts/LoginLayout.razor
+++ b/BLAZAM/Shared/Layouts/LoginLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-@inject IActiveDirectory directory
+@inject IActiveDirectoryContext directory
 @inject AppDatabaseFactory DbFactory
 @inject ConnMonitor monitor
 
