--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -2,7 +2,7 @@
 @using BLAZAM.Server.Background;
 @using BLAZAM.Server.Shared.UI.Themes;
 @inject NavigationManager Nav
-@inject IActiveDirectory directory
+@inject IActiveDirectoryContext directory
 @inject IApplicationUserStateService UserStateService
 @inject AppDatabaseFactory DbFactory
 @inject AppSnackBarService SnackBarService
