--- a/BLAZAM/Shared/Layouts/MinLayout.razor
+++ b/BLAZAM/Shared/Layouts/MinLayout.razor
@@ -7,7 +7,7 @@
     <MudLayout>
     <CascadingValue Value="this">
 
-        <MainAppBar />
+        @*<MainAppBar />*@
     </CascadingValue>
         <MudContainer Fixed>
             @if (PageHeader != null)
