--- a/BLAZAM/Pages/Benchmark.razor
+++ b/BLAZAM/Pages/Benchmark.razor
@@ -1,7 +1,7 @@
 ﻿@inject AppDatabaseFactory factory
 @page "/benchmark"
 
-@inject IActiveDirectory Dir
+@inject IActiveDirectoryContext Dir
 
 <h3>Benchmark</h3>
 <p>Number of cycles</p>
@@ -54,7 +54,7 @@
 
 
     }
-    bool DirectoryTest(IActiveDirectory dir)
+    bool DirectoryTest(IActiveDirectoryContext dir)
     {
 
         bool result = false;
