--- a/BLAZAM/Shared/UI/Users/Fields/HomeDriveSelect.razor
+++ b/BLAZAM/Shared/UI/Users/Fields/HomeDriveSelect.razor
@@ -1,5 +1,4 @@
-﻿@inherits MudSelect<string>
-<MudSelect Label="@Label" T="string" Value="@Value" Disabled=@Disabled>
+﻿<MudSelect Label="@Label" T="string" @bind-Value="@Value" Disabled=@Disabled>
     <MudSelectItem Value="String.Empty"></MudSelectItem>
     @for (var i = 'D'; i <= 'Z'; i++)
     {
@@ -9,5 +8,29 @@
 </MudSelect>
 
 @code {
+    private IEnumerable<string> selectedValue => new List<string>() { Value };
 
+    private string _value;
+    [Parameter]
+    public string Value
+    {
+        get => _value; set
+        {
+            if (_value == value) return;
+            _value = value;
+            ValueChanged.InvokeAsync(value);
+        }
+    }
+    [Parameter]
+    public EventCallback<string> ValueChanged { get; set; }
+
+    [Parameter]
+    public string Label{ get; set; }
+    [Parameter]
+    public bool Disabled{ get; set; }
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+    }
 }
